# tomato

./: README.md  design_document.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  notification.rs  tray.rs
src/components/: AudioControls.svelte  PresetSelector.svelte  SettingsDialog.svelte  TimerControls.svelte  TimerDisplay.svelte
src/lib/: config.ts  notifications.ts  timer.test.ts  timer.ts  timerStore.ts  tray.ts
src/lib/audio/: brownNoise.ts
tmp/pomodoro-vite/: package.json
tmp/pomodoro-vite/src-tauri/: tauri.conf.json
