[package]
name = "pomodoro-timer"
version = "0.1.0"
description = "Linux-focused Pomodoro timer built with Tauri"
authors = ["OpenAI Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pomodoro_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
